// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTablePagination does not emit update:page event when clicking on the three-dots button 1`] = `
<nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 1</span> of 10 records
  </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
  <ul data-elm="plist" class="datatable__plist">
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a disabled="disabled" href="#" data-elm="plink" class="datatable__plink">...</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">9</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">10</a></li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly 1`] = `
<nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>4 – 6</span> of 10 records
  </span> <a href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
  <ul data-elm="plist" class="datatable__plist">
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">1</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">2</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">3</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">4</a></li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly when total change 1`] = `
<nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>the last record</span> of 10 records
  </span> <a href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
  <ul data-elm="plist" class="datatable__plist">
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">1</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">3</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">4</a></li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly when total change 2`] = `
<nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>10 – 9</span> of 9 records
  </span> <a href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
  <ul data-elm="plist" class="datatable__plist">
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">1</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">3</a></li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly with invalid perPage 1`] = `
<nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 0</span> of 10 records
  </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
  <ul data-elm="plist" class="datatable__plist">
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a disabled="disabled" href="#" data-elm="plink" class="datatable__plink">...</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">9</a></li>
    <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">10</a></li>
  </ul>
</nav>
`;
